[package]
name = "rsforth"
version = "0.0.1"
authors = ["Lily Steidel <me@lily.bike>"]
edition = "2021"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = [ "kernel" ]
